# pcg_solver

./: .gitignore
CPP/: CMakeLists.txt  main.cpp  matrix_generator.cpp  matrix_generator.h  pcg_solver  pcg_solver.cpp  pcg_solver.h  pcg_solver_serial.cpp  preconditioner.cpp  preconditioner.h  test  test.cpp  test_omp_threads
Python/: Task1 ver1.ipynb  Task1 ver2.ipynb  Untitled1.ipynb  amg_precondition.ipynb  cg_with_precondition.ipynb  eigenvalues.ipynb  ichol.ipynb  ilu_B.ipynb  precondition_cg.ipynb  task1.py  task7-chatgpt.ipynb  test_matrixes.ipynb
